<resources>
    <string name="app_name">My Super App</string>
    <string name="hot_welcome">hot welcome form Russia!</string>
    <string name="buttonName">Click On Me!</string>
    <string name="new_hello">New Hello</string>
    <string name="click">Click</string>
    <string name="task_desc">Угадай число от 1 до 10</string>
    <string name="attempt_counter">Осталось 3 попыток(ки)</string>
    <string name="your_number">Ваше число:</string>
    <string name="try_button_name">try!</string>
    <string name="go_back">go back</string>
    <string name="game_title">Guess the Number</string>
</resources>
